Optimize http request.